@@ -22,5 +22,6 @@
 		<property name="Case sensitive" nameLabel="Table_property_case_sensitive" type="boolean" />
 		<property name="Ignore punctuation" nameLabel="Table_property_ignore_punctuation" type="boolean" />
 		<property name="Gap width" nameLabel="Table_property_gap_width" type="string" />
+        <property name="Gap Type" nameLabel="Table_property_gap_type" type="{editable, draggable}" />
 	</model>
 </addon>
