@@ -749,6 +749,7 @@
 	"Table_property_case_sensitive": "Case sensitive",
 	"Table_property_ignore_punctuation": "Ignore punctuation",
 	"Table_property_gap_width": "Gap width",
+    "Table_property_gap_type": "Gap type",
 	"Table_Of_Contents_info": "Displays a presentation's table of contents together with links to the corresponding pages.",
 	"Table_Of_Contents_name": "Table Of Contents",
 	"Table_Of_Contents_property_header": "Header",
