@@ -745,6 +745,7 @@
 	"Table_property_case_sensitive": "Uwzględnia wielkość liter",
 	"Table_property_ignore_punctuation": "Ignoruj interpunkcję",
 	"Table_property_gap_width": "Szerokość luki",
+    "Table_property_gap_type": "Gap type",
 	"Table_Of_Contents_info" : "Wyświetla spis treści całej prezentacji z odsyłaczami do odpowiednich stron.",
 	"Table_Of_Contents_name" : "Spis treści",
 	"Table_Of_Contents_property_header": "Nagłówek",
